--- a/SUMMER22/LAB TASK/LAB 07/CSE110_SUMMER22_LAB_07_22301098_07_sorting.ipynb
+++ b/SUMMER22/LAB TASK/LAB 07/CSE110_SUMMER22_LAB_07_22301098_07_sorting.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ6mv+KQ3f97E2jN3VfyyE",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOJ6mv+KQ3f97E2jN3VfyyE"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MonowarHusain/CSE110_PROGRAMMING-LANGUAGE-I/blob/main/SUMMER22/LAB%20TASK/LAB%2007/CSE110_SUMMER22_LAB_07_22301098_07_sorting.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
